--- a/package.json
+++ b/package.json
@@ -1,41 +1,18 @@
 {
-  "name": "fitclub",
+  "name": "0_gulp",
   "version": "1.0.0",
-  "description": "Fit Club Layout",
+  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/.bin/webpack",
-    "start": " ./node_modules/.bin/webpack-dev-server --watch"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/piotrthread/fitclub.git"
-  },
-  "author": "",
+  "author": "Piotr Niciejewski",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/piotrthread/fitclub/issues"
-  },
-  "homepage": "https://github.com/piotrthread/fitclub#readme",
-  "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.5",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "css-loader": "^1.0.0",
-    "file-loader": "^2.0.0",
-    "firebase": "^5.5.2",
-    "node-sass": "^4.9.3",
-    "react-transition-group": "^1.2.1",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "sass-loader": "^7.1.0",
-    "style-loader": "^0.23.0",
-    "webpack": "^4.20.2",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.9",
-    "whatwg-fetch": "^3.0.0"
+  "dependencies": {
+    "browser-sync": "^2.24.4",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^5.0.0",
+    "gulp-sass": "^4.0.1",
+    "gulp-sourcemaps": "^2.6.4"
   }
 }
